# books

./: .gitignore  .travis.yml  ChangeLog  Makefile.am  README  README.md  autogen.sh  configure.ac  index.html  params.json
.tx/: config
data/: Makefile.am  books.css  books.desktop.in.in  com.github.matze.books.gschema.xml.in.in
po/: POTFILES.in  POTFILES.skip  de.po
src/: Makefile.am  books-collection.c  books-collection.h  books-epub.c  books-epub.h  books-main-window.c  books-main-window.h  books-preferences-dialog.c  books-preferences-dialog.h  books-removed-dialog.c  books-removed-dialog.h  books-window.c  books-window.h  books.gresource.xml  main.c
src/ui/: books-preferences-dialog.ui  books.ui  books.xml
